# trikey_base_controller

./: .gitignore  CMakeLists.txt  Odom_Cmd_vel.xml  README.md  base_controller_plugins.xml  move_base_juggler.xml  odomfilter_juggler.xml  package.xml  wheels_and_base_velocities.xml
cmake/: FindEigen3.cmake
config/: base_controller.yaml
launch/: trikey_base_controller.launch
nodes/: odom_filter  odom_lpf
rviz/: base_controller.rviz  teleop_cmd_vel.rviz  teleop_cmd_vel_tuning.rviz
src/: filters.cpp  filters.hpp  karnopp_compensator.cpp  karnopp_compensator.hpp  odom_filter.cpp  odom_filter.py  omniwheel_kinematics.cpp  omniwheel_kinematics.h  trikey_base_controller.cpp  trikey_base_controller.h
test/: omniwheel_kinematics_test.cpp
