<?xml version="1.0"?>
<package format="2">
  <name>trikey_base_controller</name>
  <version>0.0.0</version>
  <description>The trikey_base_controller package</description>

  <maintainer email="carlos.gonzalez@utexas.edu">Carlos Gonzalez</maintainer>
  <license>BSD</license>

  <depend>realtime_tools</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/base_controller_plugins.xml" />
  </export>

</package>
